# FMAPIq

./: README.md
Codes/: Makefile
Codes/fmapb2-pkg/: MANIFEST.in  Makefile  README.md  pyproject.toml
Codes/fmapb2-pkg/ext/: common.h  fftw.c  grd.c  map.c  rdf.h  score.c
Codes/fmapb2-pkg/src/fmapb2/: __init__.py
Codes/fmapb2-pkg/src/fmapb2/tools/: fmap.py  fmappre.py  fmapstat.py
Codes/fmapb2-pkg/tests/: test.sh
Codes/fmapb2-pkg/tests/data/: subA.pqr
Codes/fmapiq-pkg/: README.md  build.sh  gui.py  main.py  pipeline.py  pyproject.toml
Codes/maeppi-pkg/: Makefile  README.md  pyproject.toml
Codes/maeppi-pkg/ext/: fmap_energy.c  fmap_energy.h  particle.h  particle_simple.c  simulation.c  simulation_cffi.h
Codes/maeppi-pkg/src/maeppi/: __init__.py
Codes/maeppi-pkg/src/maeppi/data/sspNF00072/: rot.eul
Codes/maeppi-pkg/src/maeppi/data/sspNF00576/: rot.eul
Codes/maeppi-pkg/src/maeppi/data/sspNF04608/: rot.eul
Codes/maeppi-pkg/src/maeppi/tools/: maeppi_ern.py  maeppi_shm_server.py  maeppi_sim.py  maeppi_traj2pdb.py
Codes/maeppi-pkg/tests/: run.fmapb2.sh  test.sh  ve.md5
Codes/sim2iq-pkg/: MANIFEST.in  Makefile  README.md  pyproject.toml
Codes/sim2iq-pkg/ext/: args.c  args.h  binning.c  binning.h  cromer_mann_4gauss.h  fft.c  fft.h  grid_mapping.c  grid_mapping.h  main.c  pd6d.c  pd6d.h  pqr_reader.c  pqr_reader.h  rdf.c  rdf.h  saxs_calculator.h  saxs_functions.c  saxs_functions.h  utils.c
Codes/sim2iq-pkg/src/sim2iq/: __init__.py
Codes/sim2iq-pkg/src/sim2iq/tools/: sim2iq_calc.py  sim2iq_pre.py
Codes/sim2iq-pkg/tests/: test.sh
Codes/sim2iq-pkg/tests/data/: input.pqr  snap.txt
Source data/: fmapiq.xlsx
Source_Data/: fmapiq.xlsx
