[build-system]
requires = ["setuptools>=61.0", "wheel", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmapb2"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
version = "0.1.0"
description = "FMAPB2 for protein second virial coefficients"
keywords = ["protein", "bioinformatics", "virial-coefficients"]
requires-python = ">=3.7"
dependencies = [
    "cffi>=1.0.0",
]

[project.scripts]
fmapb2 = "fmapb2.tools.fmap:main"
fmapb2pre = "fmapb2.tools.fmappre:main"
fmapb2stat = "fmapb2.tools.fmapstat:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["fmapb2*"]

[tool.setuptools.package-data]
fmapb2 = ["*.so", "*.dll", "*.dylib", "data/*"]
