[build-system]
requires = ["setuptools>=61.0", "wheel", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sim2iq"
authors = "Sanbo Qin"
readme = "README.md"
version = "0.1.0"
description = "I(q) calculated from snapshots in simulations"
keywords = ["protein", "SAXS", "weak interactions", "virial coefficients"]
requires-python = ">=3.7"
dependencies = [
    "cffi>=1.0.0",
]

[project.scripts]
sim2iq = "sim2iq.tools.sim2iq_calc:main"
sim2iqpre = "sim2iq.tools.sim2iq_pre:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["sim2iq*"]

[tool.setuptools.package-data]
sim2iq = ["*.so", "*.dll", "*.dylib", "data/*"]
